<resources>
    <string name="app_name">PharmacyManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Enter your name</string>
    <string name="label">Enter your email</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm password</string>
    <string name="terms">By creating an account you agree with out terms and conditions</string>
    <string name="account">Create an account</string>
    <string name="member">Already a member?</string>
    <string name="log">log in</string>
    <string name="login">Login</string>
    <string name="email">abcd@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todaysale">Today Sale</string>
    <string name="bdt">BDT: 200</string>
    <string name="todayprofit">Today Profit</string>
    <string name="thismonth">This Month</string>
    <string name="sales">Sales: 1500</string>
    <string name="purchase">Purchase:1200</string>
    <string name="profit">Profit</string>
    <string name="quantity">Quantity</string>
    <string name="piece">Piece</string>
    <string name="purchasetext">Purchase</string>
    <string name="_10">10</string>
    <string name="selling_price">Selling price</string>
    <string name="purchase_price">Purchase price</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="_100mg">(100mg)</string>
    <string name="napa">Napa</string>
    <string name="pic">pic</string>
    <string name="capsule">Capsule</string>
</resources>